# prepsuite

./: .dockerignore  .env.example  .env.production.example  .env.test.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 202604280001_bootstrap.py  202604280002_multi_tenancy_rls.py  202604280003_prepaccess_auth_rbac.py  202604280004_prep_settings.py  202604280005_prep_students.py  202604280006_prep_people.py  202604280007_prep_learn.py  202604280008_prep_question.py  202604280009_prep_assess.py  202604280010_prep_attend.py  202604280011_prep_live.py
app/: __init__.py  main.py  worker.py
app/core/: __init__.py  cache.py  config.py  database.py  events.py  exceptions.py  feature_gates.py  logging.py  pagination.py  permissions.py  security.py  tenant_context.py
app/modules/: __init__.py
app/shared/: __init__.py  models.py  repository.py  schemas.py  service.py
docs/: api.md  architecture.md  database.md  phase-01-bootstrap.md  phase-02-multi-tenancy-rls.md  phase-03-prepaccess-auth-rbac.md  phase-04-prepsettings.md  phase-05-prepstudents.md  phase-06-preppeople.md  phase-07-preplearn.md  phase-08-prepquestion.md  phase-09-prepassess.md  phase-10-prepattend.md  phase-11-preplive.md  phase-14-live-e2e.md  testing.md
scripts/: __init__.py  seed_app_catalog.py
scripts/postgres/: 001-create-app-role.sql
tests/: conftest.py  test_config.py  test_database.py  test_system_endpoints.py
tests/access/: test_auth_api.py
tests/assess/: test_assess_api.py
(+97 files in other folders)
