[project]
name = "prepsuite-backend"
version = "0.1.0"
description = "PrepSuite multi-tenant SaaS backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "orjson>=3.10.7",
    "pydantic[email]>=2.9.2",
    "pydantic-settings>=2.5.2",
    "redis>=5.0.8",
    "sqlalchemy[asyncio]>=2.0.35",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
    "testcontainers[postgres,redis]>=4.8.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
plugins = []

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*", "structlog.*"]
ignore_missing_imports = true
